--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,6 @@ twint/twint/storage/__pycache__/write.cpython-37.pyc
 .vscode/settings.json
 
 venv
+__pycache__/twint_handler.cpython-37.pyc
+preprocessing/__pycache__/preprocessing.cpython-37.pyc
+.DS_Store
